--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,9 +41,12 @@
 
         </activity>
 
-        <activity android:name=".CommandRunner.SingleItemView" />
+        <activity android:name=".CommandRunner.SingleItemView"
+            android:label="CiscoFullApp"
+            android:windowSoftInputMode="stateHidden">
 
-
+        </activity>
     </application>
+
 
 </manifest>
