--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,8 @@
 
         <activity android:name=".CommandRunner.SingleItemView" />
 
+        <activity android:name=".CommandRunner.CommandClass"/>
+
 
     </application>
 
