--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,11 @@
             android:windowSoftInputMode="stateHidden">
 
         </activity>
+
+        <activity android:name=".CommandRunner.CommandClass">
+
+
+        </activity>
     </application>
 
 
