--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
@@ -25,6 +26,7 @@ allprojects {
             maven {
                 url "http://jitpack.io"
             }
+            google()
         }
     }
 
