--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,10 @@
             android:screenOrientation="portrait">
 
         </activity>
+        <activity android:name=".SoftwareAdvisor.SoftwareClass"
+            android:screenOrientation="portrait">
+
+        </activity>
 
         <activity android:name=".CommandRunner.searchViewTest"
             android:label="@string/app_name"
